# openapi.json
@@ -4401,6 +4401,13 @@
                       "true",
                       "false"
                     ]
+                  },
+                  "order_by": {
+                    "type": "string",
+                    "enum": [
+                      "distance",
+                      "created_at"
+                    ]
                   }
                 },
                 "required": [
